# mistral-ocr-zotero

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  test_e2e.py
docs/: mistral_ocr_api.md
src/mistral_ocr_zotero/: __init__.py  chunk_merger.py  converter.py  ocr_client.py  pdf_chunker.py  server.py  zotero_integration.py  zotero_storage.py
tests/: __init__.py  test_chunk_merger.py  test_converter.py  test_ocr_client.py  test_pdf_chunker.py  test_zotero_storage.py
